--- a/index.html
+++ b/index.html
@@ -1,219 +1,9 @@
 <!DOCTYPE html>
 <html lang="tr">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Sen Ne Kadar? - Web Quiz
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-  <link href="style.css" rel="stylesheet"/>
- </head>
- <body class="min-h-screen flex flex-col items-center justify-center p-4">
-  <div id="authStatus">
-   <span id="authText">
-    Giriş yapılmadı
-   </span>
-   <button id="authButtonGoogle">
-    <i class="fab fa-google mr-1">
-    </i>
-    Google ile Giriş
-   </button>
-  </div>
-  <div class="flex" id="loadingIndicator">
-   <div class="spinner">
-   </div>
-  </div>
-  <div class="page active w-full max-w-md text-center" id="mainPage">
-   <img alt="Uygulama Logosu" class="mx-auto mb-8 rounded-lg" src="https://placehold.co/300x100/F79F1F/FFFFFF?text=SEN+NE+KADAR%3F&amp;font=Impact"/>
-   <div class="space-y-4">
-    <button class="btn-primary w-full" id="btnKategoriler">
-     KATEGORİLER
-    </button>
-    <button class="btn-primary w-full" id="btnProfil">
-     PROFİL / GİRİŞ
-    </button>
-    <button class="btn-primary w-full" id="btnRozetlerim">
-     ROZETLERİM
-    </button>
-    <button class="btn-primary w-full" id="btnLiderTablosu">
-     LİDER TABLOSU
-    </button>
-   </div>
-   <button class="mt-8 text-white hover:text-gray-300" id="btnAyarlar">
-    <i class="fas fa-cog fa-2x">
-    </i>
-   </button>
-  </div>
-  <div class="page w-full max-w-3xl" id="categoriesPage">
-   <div class="flex justify-between items-center mb-6 px-2">
-    <button class="text-white hover:text-gray-300 p-2" id="btnBackNavigation">
-     <i class="fas fa-arrow-left fa-2x">
-     </i>
-    </button>
-    <h1 class="text-3xl font-bold text-center text-white flex-grow" id="categoriesPageTitle">
-     Kategoriler
-    </h1>
-    <div class="w-10 h-10">
-    </div>
-   </div>
-   <div class="text-center text-gray-200 mb-4" id="breadcrumbContainer">
-   </div>
-   <div id="mainCategoryGridContainer">
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-2" id="mainCategoryGrid">
-    </div>
-   </div>
-   <div id="subCategoryGridContainer" style="display: none;">
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-2" id="subCategoryGrid">
-    </div>
-   </div>
-   <div id="quizGridContainer" style="display: none;">
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-2" id="quizGrid">
-    </div>
-   </div>
-  </div>
-  <div class="page w-full max-w-md text-center" id="profilePage">
-   <button class="absolute top-4 left-4 text-white hover:text-gray-300 p-2" id="btnBackToMainFromProfile">
-    <i class="fas fa-arrow-left fa-lg">
-    </i>
-    Ana Sayfa
-   </button>
-   <h1 class="text-4xl font-bold mb-8 text-white">
-    Profil
-   </h1>
-   <div class="card" id="authFormContainer" style="display: none;">
-    <h2 class="text-2xl font-semibold mb-6 text-white">
-     Giriş Yap / Kayıt Ol
-    </h2>
-    <input class="input-field" id="emailInput" placeholder="E-posta Adresiniz" type="email"/>
-    <p class="error-message" id="emailError">
-     Geçerli bir e-posta adresi girin.
-    </p>
-    <input class="input-field" id="passwordInput" placeholder="Şifreniz" type="password"/>
-    <p class="error-message" id="authError">
-    </p>
-    <div class="flex space-x-4 mt-4">
-     <button class="btn-secondary w-1/2" id="btnCreateAccount">
-      Hesap Oluştur
-     </button>
-     <button class="btn-primary w-1/2" id="btnLogin">
-      Giriş Yap
-     </button>
-    </div>
-   </div>
-   <div class="card" id="profileContentContainer" style="display: none;">
-    <p id="profileContentText">
-     Profil bilgileri yükleniyor...
-    </p>
-   </div>
-  </div>
-  <div class="page w-full max-w-md text-center" id="badgesPage">
-   <button class="btn-back-to-main-simple absolute top-4 left-4 text-white hover:text-gray-300 p-2">
-    <i class="fas fa-arrow-left fa-lg">
-    </i>
-    Ana Sayfa
-   </button>
-   <h1 class="text-4xl font-bold mb-8 text-white">
-    Rozetlerim
-   </h1>
-   <div class="card grid grid-cols-3 gap-4" id="badgesContent">
-    <p class="col-span-3">
-     Rozetler yükleniyor...
-    </p>
-   </div>
-  </div>
-  <div class="page w-full max-w-md text-center" id="leaderboardPage">
-   <button class="btn-back-to-main-simple absolute top-4 left-4 text-white hover:text-gray-300 p-2">
-    <i class="fas fa-arrow-left fa-lg">
-    </i>
-    Ana Sayfa
-   </button>
-   <h1 class="text-4xl font-bold mb-8 text-white">
-    Lider Tablosu
-   </h1>
-   <div class="card" id="leaderboardContent">
-    <p>
-     Lider tablosu yükleniyor...
-    </p>
-   </div>
-  </div>
-  <div class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4" id="settingsModal" style="display: none; z-index: 1000;">
-   <div class="bg-white p-6 rounded-lg shadow-xl w-full max-w-sm text-gray-800">
-    <h2 class="text-2xl font-semibold mb-4">
-     Ayarlar
-    </h2>
-    <p class="my-2" id="userEmailForSettings">
-    </p>
-    <button class="btn-primary w-full mt-4" id="btnLogout" style="background-color: #E74C3C;">
-     Çıkış Yap
-    </button>
-    <button class="btn-secondary w-full mt-6" id="btnCloseSettings">
-     Kapat
-    </button>
-   </div>
-  </div>
-  <div class="page w-full max-w-2xl text-center" id="quizPage">
-   <button class="absolute top-4 left-4 text-white hover:text-gray-300 p-2" id="btnKategorilereDonQuiz">
-    <i class="fas fa-arrow-left fa-lg">
-    </i>
-    Kategoriler
-   </button>
-   <h1 class="text-3xl font-bold mb-2 text-white" id="quizPageTitle">
-    Quiz Başlıyor!
-   </h1>
-   <p class="text-sm text-gray-300 mb-4" id="quizBreadcrumb">
-   </p>
-   <div class="card">
-    <img alt="Soru Resmi" class="mx-auto mb-4 rounded-lg max-h-60 object-contain" id="quizQuestionImage" src="" style="display:none;"/>
-    <p class="text-xl text-white mb-6" id="quizQuestionText">
-     Sorular ve cevap seçenekleri burada gösterilecek.
-    </p>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-3" id="quizOptionsContainer">
-    </div>
-    <div class="mt-6 flex justify-center items-center">
-     <span class="text-white text-lg" id="questionCounter">
-      Soru 1 / 10
-     </span>
-    </div>
-   </div>
-  </div>
-  <div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center p-4" id="quizResultModal" style="display: none; z-index: 1000;">
-   <div class="modal-content text-center">
-    <h2 class="text-2xl font-bold mb-4" id="resultModalTitle">
-     Quiz Sonucu
-    </h2>
-    <p class="text-xl mb-2" id="resultModalScore">
-    </p>
-    <img alt="Yorum Resmi" class="result-comment-img" id="resultModalCommentImage" src="" style="display:none;"/>
-    <p class="text-lg my-3" id="resultModalComment">
-    </p>
-    <div class="mt-4" id="resultModalBadgeContainer">
-     <h3 class="text-lg font-semibold">
-      Kazanılan Rozet:
-     </h3>
-     <img alt="Rozet Resmi" class="result-badge-img" id="resultModalBadgeImage" src="" style="display:none;"/>
-     <p class="text-md" id="resultModalBadgeName">
-     </p>
-    </div>
-    <button class="btn-primary w-full mt-6" id="btnCloseResultModal">
-     Kapat
-    </button>
-   </div>
-  </div>
-  <button class="fixed bottom-4 right-4 bg-amber-500 hover:bg-amber-600 text-white p-3 rounded-full shadow-lg z-50 transition-opacity duration-300 opacity-0 pointer-events-none" id="btnGoToMainFixed" title="Ana Menüye Dön">
-   <i class="fas fa-home fa-lg">
-   </i>
-  </button>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js">
-  </script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js">
-  </script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js">
-  </script>
-  <script src="script.js">
-  </script>
- </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sen Ne Kadar? - Web Quiz</title>
+    <script src="script.js"></script>
+</body>
 </html>
