--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
 
     <div id="authStatus">
         <span id="authText">Giriş yapılmadı</span>
-        <button id="authButtonGoogle"><i class="fab fa-google mr-1"></i> Google ile Giriş</button>
+        <button id="authButtonGoogle" title="Google ile Giriş"><i class="fab fa-google mr-1"></i> Google ile Giriş</button>
     </div>
 
-    <div id="loadingIndicator" class="flex">
-        <div class="spinner"></div>
+    <div id="loadingIndicator" class="flex" title="Yükleniyor">
+        <div class="spinner" title="Yükleniyor"></div>
     </div>
 
-    <div id="mainPage" class="page active w-full max-w-md text-center">
-        <img src="https://placehold.co/300x100/F79F1F/FFFFFF?text=SEN+NE+KADAR%3F&font=Impact" alt="Uygulama Logosu" class="mx-auto mb-8 rounded-lg">
+    <div id="mainPage" class="page active w-full max-w-md text-center" style="background-image: url('images/quiz_background.jpg'); background-size: cover;" title="Ana Sayfa">
+        <img src="https://placehold.co/300x100/F79F1F/FFFFFF?text=SEN+NE+KADAR%3F&font=Impact" alt="Uygulama Logosu" class="mx-auto mb-8 rounded-lg" title="Sen Ne Kadar?">
         <div class="space-y-4">
-            <button id="btnKategoriler" class="btn-primary w-full">KATEGORİLER</button>
-            <button id="btnProfil" class="btn-primary w-full">PROFİL / GİRİŞ</button>
-            <button id="btnRozetlerim" class="btn-primary w-full">ROZETLERİM</button>
-            <button id="btnLiderTablosu" class="btn-primary w-full">LİDER TABLOSU</button>
+            <button id="btnKategoriler" class="btn-primary w-full" title="Kategoriler">KATEGORİLER</button>
+            <button id="btnProfil" class="btn-primary w-full" title="Profil">PROFİL / GİRİŞ</button>
+            <button id="btnRozetlerim" class="btn-primary w-full" title="Rozetlerim">ROZETLERİM</button>
+            <button id="btnLiderTablosu" class="btn-primary w-full" title="Lider Tablosu">LİDER TABLOSU</button>
+            <a href="/xox"><button class="btn-primary w-full" style="--blue-color: #007bff;" title="XOX2 Oyna">XOX2 OYNA</button></a>
         </div>
-        <button id="btnAyarlar" class="mt-8 text-white hover:text-gray-300"><i class="fas fa-cog fa-2x"></i></button>
+        <button id="btnAyarlar" class="mt-8 text-white hover:text-gray-300" title="Ayarlar"><i class="fas fa-cog fa-2x"></i></button>
     </div>
 
     <div id="categoriesPage" class="page w-full max-w-3xl">
         <div class="flex justify-between items-center mb-6 px-2">
-            <button id="btnBackNavigation" class="text-white hover:text-gray-300 p-2"><i class="fas fa-arrow-left fa-2x"></i></button>
+            <button id="btnBackNavigation" class="text-white hover:text-gray-300 p-2" title="Geri"><i class="fas fa-arrow-left fa-2x"></i></button>
             <h1 id="categoriesPageTitle" class="text-3xl font-bold text-center text-white flex-grow">Kategoriler</h1>
             <div class="w-10 h-10"></div> </div>
         <div id="breadcrumbContainer" class="text-center text-gray-200 mb-4"></div>
@@ -43,7 +44,7 @@
     </div>
 
     <div id="profilePage" class="page w-full max-w-md text-center">
-        <button id="btnBackToMainFromProfile" class="absolute top-4 left-4 text-white hover:text-gray-300 p-2"><i class="fas fa-arrow-left fa-lg"></i> Ana Sayfa</button>
+        <button id="btnBackToMainFromProfile" class="absolute top-4 left-4 text-white hover:text-gray-300 p-2" title="Ana Sayfa"><i class="fas fa-arrow-left fa-lg"></i> Ana Sayfa</button>
         <h1 class="text-4xl font-bold mb-8 text-white">Profil</h1>
         <div id="authFormContainer" class="card" style="display: none;">
             <h2 class="text-2xl font-semibold mb-6 text-white">Giriş Yap / Kayıt Ol</h2>
@@ -62,13 +63,13 @@
     </div>
 
     <div id="badgesPage" class="page w-full max-w-md text-center">
-        <button class="btn-back-to-main-simple absolute top-4 left-4 text-white hover:text-gray-300 p-2"><i class="fas fa-arrow-left fa-lg"></i> Ana Sayfa</button>
+        <button class="btn-back-to-main-simple absolute top-4 left-4 text-white hover:text-gray-300 p-2" title="Ana Sayfa"><i class="fas fa-arrow-left fa-lg"></i> Ana Sayfa</button>
         <h1 class="text-4xl font-bold mb-8 text-white">Rozetlerim</h1>
         <div id="badgesContent" class="card grid grid-cols-3 gap-4"><p class="col-span-3">Rozetler yükleniyor...</p></div>
     </div>
 
     <div id="leaderboardPage" class="page w-full max-w-md text-center">
-        <button class="btn-back-to-main-simple absolute top-4 left-4 text-white hover:text-gray-300 p-2"><i class="fas fa-arrow-left fa-lg"></i> Ana Sayfa</button>
+        <button class="btn-back-to-main-simple absolute top-4 left-4 text-white hover:text-gray-300 p-2" title="Ana Sayfa"><i class="fas fa-arrow-left fa-lg"></i> Ana Sayfa</button>
         <h1 class="text-4xl font-bold mb-8 text-white">Lider Tablosu</h1>
         <div id="leaderboardContent" class="card">
             <p>Lider tablosu yükleniyor...</p>
@@ -85,7 +86,7 @@
     </div>
 
     <div id="quizPage" class="page w-full max-w-2xl text-center">
-         <button id="btnKategorilereDonQuiz" class="absolute top-4 left-4 text-white hover:text-gray-300 p-2"><i class="fas fa-arrow-left fa-lg"></i> Kategoriler</button>
+         <button id="btnKategorilereDonQuiz" class="absolute top-4 left-4 text-white hover:text-gray-300 p-2" title="Kategoriler"><i class="fas fa-arrow-left fa-lg"></i> Kategoriler</button>
         <h1 id="quizPageTitle" class="text-3xl font-bold mb-2 text-white">Quiz Başlıyor!</h1>
         <p id="quizBreadcrumb" class="text-sm text-gray-300 mb-4"></p>
         <div class="card">
@@ -126,7 +127,7 @@
         </div>
     </div>
 
-    <button id="btnGoToMainFixed" class="fixed bottom-4 right-4 bg-amber-500 hover:bg-amber-600 text-white p-3 rounded-full shadow-lg z-50 transition-opacity duration-300 opacity-0 pointer-events-none" title="Ana Menüye Dön">
+    <button id="btnGoToMainFixed" class="fixed bottom-4 right-4 bg-amber-500 hover:bg-amber-600 text-white p-3 rounded-full shadow-lg z-50 transition-opacity duration-300 opacity-0 pointer-events-none" title="Ana Sayfaya Dön">
         <i class="fas fa-home fa-lg"></i>
     </button>
 
