--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="spinner" title="Yükleniyor"></div>
     </div>
 
-    <div id="mainPage" class="page active w-full max-w-md text-center" style="background-image: url('images/quiz_background.jpg'); background-size: cover;" title="Ana Sayfa">
+    <div id="mainPage" class="page active w-full max-w-md text-center" title="Ana Sayfa">
         <img src="https://placehold.co/300x100/F79F1F/FFFFFF?text=SEN+NE+KADAR%3F&font=Impact" alt="Uygulama Logosu" class="mx-auto mb-8 rounded-lg" title="Sen Ne Kadar?">
         <div class="space-y-4">
             <button id="btnKategoriler" class="btn-primary w-full" title="Kategoriler">KATEGORİLER</button>
             <button id="btnProfil" class="btn-primary w-full" title="Profil">PROFİL / GİRİŞ</button>
             <button id="btnRozetlerim" class="btn-primary w-full" title="Rozetlerim">ROZETLERİM</button>
             <button id="btnLiderTablosu" class="btn-primary w-full" title="Lider Tablosu">LİDER TABLOSU</button>
-            <a href="/xox"><button class="btn-primary w-full" style="--blue-color: #007bff;" title="XOX2 Oyna">XOX2 OYNA</button></a>
+            <a href="xox/index.html"><button class="btn-primary w-full" style="--blue-color: #007bff;" title="XOX2 Oyna">XOX2 OYNA</button></a>
         </div>
         <button id="btnAyarlar" class="mt-8 text-white hover:text-gray-300" title="Ayarlar"><i class="fas fa-cog fa-2x"></i></button>
     </div>
@@ -127,7 +127,7 @@
         </div>
     </div>
 
-    <button id="btnGoToMainFixed" class="fixed bottom-4 right-4 bg-amber-500 hover:bg-amber-600 text-white p-3 rounded-full shadow-lg z-50 transition-opacity duration-300 opacity-0 pointer-events-none" title="Ana Sayfaya Dön">
+    <button id="btnGoToMainFixed" class="fixed bottom-4 left-1/2 -translate-x-1/2 bg-amber-500 hover:bg-amber-600 text-white p-3 rounded-full shadow-lg z-50 transition-opacity duration-300 opacity-0 pointer-events-none" title="Ana Sayfaya Dön">
         <i class="fas fa-home fa-lg"></i>
     </button>
 
